--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,3 @@
-/* CURRENTLY IN: styles/main.css */
-html, body {
-	height: 100%;
-	width: 100%;
-	min-height: 100%;
-}
 .cards-list {
   z-index: 0;
   width: 100%;
@@ -14,12 +8,12 @@ html, body {
 
 .card {
   margin: 30px auto;
-  width: 300px;
-  height: 300px;
+  width: 276px;
+  height: 276px;
   border-radius: 40px;
-  box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
+box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
-  transition: 04s;
+  transition: 0.4s;
 }
 
 .card .card_image {
@@ -40,9 +34,15 @@ html, body {
   border-radius: 0px 0px 40px 40px;
   font-family: sans-serif;
   font-weight: bold;
-  font-size: 30px;
+  font-size: 20px;
   margin-top: -80px;
   height: 40px;
+}
+
+.card:hover {
+  transform: scale(0.9, 0.9);
+  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
+    -5px -5px 30px 15px rgba(0,0,0,0.22);
 }
 
 .title-white {
@@ -59,50 +59,15 @@ html, body {
     flex-direction: column;
   }
 }
-.card:hover {
-  transform: scale(0.9, 0.9);
-  box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
-    -5px -5px 30px 15px rgba(0,0,0,0.22);
-    
-}
-.card:hover:after{
-
-	content: attr(data-hover);
-	text-align: center;
-	font-family: sans-serif;
-	font-weight: bold;
-	font-size: 30px;
-	margin-top: -113px;
-  	height: 50px;
-  	
-  	color: white;
-  	text-align: center;
-
-	  
-  }
 
 
 
-/*
-.card {
-  margin: 30px auto;
-  width: 300px;
-  height: 300px;
-  border-radius: 40px;
-  background-image: url('https://i.redd.it/b3esnz5ra34y.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-repeat: no-repeat;
-box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
-  transition: 0.4s;
-}
-*/
 
 #soundcloud-player .col {
 	position: fixed;
 	height: 100%;
 	width: 100%;
+  border-radius: 16px;
 	top: 0;
 	left: 0;
 }
@@ -111,6 +76,8 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 	width: 20%;
 	height: 100%;
 	background-color: #292929;
+  margin: 16px;
+  border-radius: 16px;
 	overflow: auto;
 
 	position: fixed;
