--- a/styles/main.css
+++ b/styles/main.css
@@ -37,6 +37,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   font-size: 20px;
   margin-top: -80px;
   height: 40px;
+
 }
 
 .card:hover {
@@ -124,4 +125,13 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 #soundcloud-player .search-results {
 	justify-content: center;
     margin-top: 30px;
+}
+
+
+/*Link color*/
+
+a:link {
+  color: white;
+  background-color: transparent;
+  text-decoration: none;
 }
