--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,17 @@
 box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.22);
   cursor: pointer;
   transition: 0.4s;
+
+
+}
+
+.card .h2{
+  position: absolute;
+  top: 30%;
+  text-align: center;
+  width: 100%;
+  color: white;
+  font-size:0px;
 }
 
 .card .card_image {
@@ -39,12 +50,31 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   height: 40px;
 
 }
-
-.card:hover {
+.cards-list:hover .card{
+  filter:blur(1.9px);
+  
+  transform: scale(0.97);
+  box-shadow: none;
+}
+.cards-list:hover .card:hover {
   transform: scale(0.9, 0.9);
   box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
     -5px -5px 30px 15px rgba(0,0,0,0.22);
+
+  transform: scale(1);
+  filter: blur(0px);
+  opacity: 1;
+
+
 }
+.cards-list:hover .card:hover .h2{
+  
+  font-size:60px;
+  transition: .4s;
+
+}
+
+
 
 .title-white {
   color: white;
