--- a/styles/main.css
+++ b/styles/main.css
@@ -23,8 +23,10 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
   top: 30%;
   text-align: center;
   width: 100%;
-  color: white;
+  color: #7bed9f;
   font-size:0px;
+  border-radius: 4%;
+  
 }
 
 .card .card_image {
@@ -69,8 +71,8 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 }
 .cards-list:hover .card:hover .h2{
   
-  font-size:60px;
-  transition: .4s;
+  font-size:100px;
+  transition: .6s;
 
 }
 
@@ -106,10 +108,12 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 #soundcloud-player .col-left {
 	width: 20%;
 	height: 100%;
-	background-color: #292929;
+
+	background-color: #f1f2f6;
   margin: 16px;
   border-radius: 16px;
 	overflow: auto;
+  opacity: 0.8;
 
 	position: fixed;
 	left: 0;
