--- a/styles/main.css
+++ b/styles/main.css
@@ -109,7 +109,7 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 	width: 20%;
 	height: 100%;
 
-	background-color: #f1f2f6;
+	background-color: #f1f2f6;  
   margin: 16px;
   border-radius: 16px;
 	overflow: auto;
@@ -121,6 +121,22 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 	min-width: 200px;
 	z-index: 1;
+}
+#soundcloud-player .col-left .btn{
+  margin: 5%;
+  border-radius: 16px;
+  background-color:#bdc3c7;
+  height: 60px;
+  width: 89.5%;
+  opacity: 0.7;
+
+  text-align: center;
+  
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 15px;
+
+
 }
 
 #soundcloud-player .col-right {
