--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,11 @@
+
+html body{
+  margin: 0;
+  padding: 0;
+  
+  background-image: url(White.jpg);
+}
+
 .cards-list {
   z-index: 0;
   width: 100%;
@@ -107,7 +115,8 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 
 #soundcloud-player .col-left {
 	width: 20%;
-	height: 100%;
+	height: 95%;
+
 
 	background-color: #f1f2f6;  
   margin: 16px;
@@ -163,8 +172,12 @@ box-shadow: 5px 5px 30px 7px rgba(0,0,0,0.25), -5px -5px 30px 7px rgba(0,0,0,0.2
 }
 
 #soundcloud-player .input-search {
-	width: 100%;
+
+
+	width: 50%;
 	display: block;
+  border-radius: 10px;
+  border: 3px solid black;
 }
 
 #soundcloud-player .search.icon {
